@@ -19,10 +19,12 @@ MCInstall=$bin/mc-server
 MrauuConfig=$MrauuInstall/config
 BargsLoc=$MrauuConfig/bargs.sh
 MrauuUpdateConf=$MrauuConfig/update
-mcupdate=Unused?
 MrauuPluginConf=$MrauuConfig/plugin
 StartupConf=$MrauuConfig/startup
 AlertConf=$MrauuConfig/alerts
+updatepluginsconf=$MrauuUpdateConf/plugins
+updateserverconf=$MrauuUpdateConf/server
+downloadconf=$MrauuUpdateConf/download
 
 # Replace debug.sh with your package manager of choice!
 # Make sure a valid update script exists in the
@@ -30,11 +32,14 @@ AlertConf=$MrauuConfig/alerts
 osupgrade=$MrauuUpdateConf/debug.sh
 
 # Other script directories. Do not edit if you don't know what you're doing!
-plupdate=$MrauuPluginConf/plupdate.sh
+plupdate=$updatepluginsconf/manual.sh
 stop=$MrauuInstall/stop.sh
 run=$MrauuInstall/run.sh
 srvmsg=$MrauuInstall/servermsg.sh
 BackupCommand=$MrauuInstall/mcbackup.sh
+
+# Command to get the latest version and build of MC server.
+getlatestver=$updateserverconf/latest-purpur.sh
 
 # Username of an unprivileged user, to run the server software.
 # MAKE SURE THIS USER CAN:
@@ -46,3 +51,13 @@ UnprivilegedUser=gameuser
 # Backup configuration
 BackupLoc=/mnt/backup/
 BackupName=MC-Backup-$(date +"%Y-%m-%d-%H-%M-%S").tar.gz
+
+# Startup command for Minecraft Server
+javastartup="sudo -u $UnprivilegedUser java -Xms2000M -Xmx3500M --add-modules=jdk.incubator.vector -jar ./server.jar --nogui"
+
+# Command to get current MC server version.
+javaverget="$javastartup --version"
+
+# Upgrade configuration.
+MCCurrentVer="latest"
+pluginslist=$updatepluginsconf/plugins.csv
